config/emacs: add stmpmail and xoauth auth source

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1165,6 +1165,10 @@ its over the machines took over guys can i get my likes now
 ** mu4e
 GNU patch review metho dor sometihng idk
 #+begin_src emacs-lisp
+
+  (use-package stmpmail)
+  (use-package auth-source-xoauth2)
+
   (use-package mu4e
     :config
 
