--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -891,8 +891,7 @@ this should be useful later
 #+begin_src emacs-lisp
   (when (eq system-type 'gnu/linux)
     (use-package envrc
-      :hook (after-init . global-envrc-mode)
-      ))
+      :hook (after-init . envrc-global-mode)))
 #+end_src
 ** Color Picker
 #+begin_src emacs-lisp
