--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1099,7 +1099,7 @@ does NOT WORK ON WINDOWS
     			    :encryption tls
     			    :nick "sako@emacs/Libera"
     			    :user-name "sako@emacs/Libera"
-    			    :password ,(concat "sako@emacs/Libera:" password-store-get "SelfHosted/ZNC"))))
+    			    :password ,(concat "sako@emacs/Libera:" (password-store-get "SelfHosted/ZNC")))))
 
   (defun rcirc-detach-buffer ()
     (interactive)
