--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -590,46 +590,28 @@ kept-old-versions 5)
 #+end_src
 ** Dashboard
 #+begin_src emacs-lisp
-    ;; (use-package dashboard
-    ;;   :init
-    ;;   (setq initial-buffer-choice 'dashboard-open) 
-    ;;   ;; Set the title
-    ;;   (setq dashboard-banner-logo-title "GET ME OUT GET ME OUT GET ME OUT")
-    ;;   (setq dashboard-image-banner-max-height 200)
-    ;;   ;; Set the banner
-    ;;   (setq dashboard-startup-banner '"~/.emacs.d/icon.png")
-    ;;   (setq dashboard-center-content t)
-    ;;   (setq dashboard-vertically-center-content t)
-    ;;   (setq dashboard-show-shortcuts nil)
+    (use-package dashboard
+      :init
+      (setq initial-buffer-choice 'dashboard-open) 
+      ;; Set the title
+      (setq dashboard-banner-logo-title "GET ME OUT GET ME OUT GET ME OUT")
+      (setq dashboard-image-banner-max-height 200)
+      ;; Set the banner
+      (setq dashboard-startup-banner '"~/.emacs.d/icon.png")
+      (setq dashboard-center-content t)
+      (setq dashboard-vertically-center-content t)
+      (setq dashboard-show-shortcuts nil)
 
-    ;;   ;; nerd icons
-    ;;   (setq dashboard-display-icons-p t)     ; display icons on both GUI and terminal
-    ;;   (setq dashboard-icon-type 'nerd-icons) ; use `nerd-icons' package
+      ;; nerd icons
+      (setq dashboard-display-icons-p t)     ; display icons on both GUI and terminal
+      (setq dashboard-icon-type 'nerd-icons) ; use `nerd-icons' package
 
-    ;;   ;; list stuff
-    ;;   (setq dashboard-items '((recents   . 3)
-    ;;                       (projects  . 3)
-    ;;                       (agenda    . 3)))
-    ;;   :config
-    ;;   (dashboard-setup-startup-hook))
-#+end_src
-** Enlight
-#+begin_src emacs-lisp
-   (use-package enlight
-     :config
-     (setopt initial-buffer-choice #'enlight)  
-     :custom
-     (enlight-content
-      (concat
-       (propertize "MENU" 'face 'highlight)
-       "\n"
-       (enlight-menu
-        '(("Org Mode"
-   	("Org-Agenda (current day)" (org-agenda nil "a") "a"))
-          ("Hi"
-   	("mu4e" mu4e "m"))
-          ("Other"
-   	("Projects" project-switch-project "p")))))))
+      ;; list stuff
+      (setq dashboard-items '((recents   . 3)
+                          (projects  . 3)
+                          (agenda    . 3)))
+      :config
+      (dashboard-setup-startup-hook))
 #+end_src
 * Auth
 #+begin_src emacs-lisp
