--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -594,8 +594,8 @@ kept-old-versions 5)
       :init
       (setq initial-buffer-choice 'dashboard-open) 
       ;; Set the title
-      (setq dashboard-banner-logo-title "GET ME OUT GET ME OUT GET ME OUT")
-      (setq dashboard-image-banner-max-height 200)
+      (setq dashboard-banner-logo-title "Welcome to Emacs!")
+      (setq dashboard-image-banner-max-height 100)
       ;; Set the banner
       (setq dashboard-startup-banner '"~/.emacs.d/icon.png")
       (setq dashboard-center-content t)
@@ -607,9 +607,7 @@ kept-old-versions 5)
       (setq dashboard-icon-type 'nerd-icons) ; use `nerd-icons' package
 
       ;; list stuff
-      (setq dashboard-items '((recents   . 3)
-                          (projects  . 3)
-                          (agenda    . 3)))
+      (setq dashboard-items '((projects  . 3)))
       :config
       (dashboard-setup-startup-hook))
 #+end_src
