config/emacs: sigma skibidi toilet

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -632,9 +632,7 @@ kept-old-versions 5)
     :config
     (setq password-store-password-length 12))
 
-  (use-package auth-source-pass
-    :config
-    (auth-source-pass-enable))
+  (auth-source-pass-enable)
 #+end_src
 ** OAuth2
 this should be useful later
@@ -1097,7 +1095,7 @@ does NOT WORK ON WINDOWS
     			    :encryption tls
     			    :nick "sako@emacs/Libera"
     			    :user-name "sako@emacs/Libera"
-    			    :password ,(concat "sako@emacs/Libera:" (string-trim (shell-command-to-string "pass show SelfHosted/ZNC | head -n 1"))))))
+    			    :password ,(concat "sako@emacs/Libera:" (password-store-get "SelfHosted/ZNC")))))
 
   (defun rcirc-detach-buffer ()
     (interactive)
