config/emacs: shennanigan test

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1082,37 +1082,35 @@ does NOT WORK ON WINDOWS
 #+end_src
 ** rcirc (irc) 
 #+begin_src emacs-lisp
-  (require 'rcirc)
+  ;; (require 'rcirc)
 
-
-  (defvar *rcirc-last-message-time* nil)
-  (defvar *rcirc-last-message-time-file* "~/.emacs.d/.rcirc-last-message-time")
-  (defvar *rcirc-last-message-time-initial* nil)
-
-
-  (setq rcirc-id-string "Emacs rcirc")
-
-  (setq rcirc-server-alist `(("znc.sako.box"
-    			    :port 7000
-    			    :encryption tls
-    			    :nick "sako@emacs/Libera"
-    			    :user-name "sako@emacs/Libera"
-    			    :password ,(concat "sako@emacs/Libera:" (password-store-get "SelfHosted/ZNC")))))
-
-  (defun rcirc-detach-buffer ()
-    (interactive)
-    (let ((buffer (current-buffer)))
-      (when (and (rcirc-buffer-process)
-                 (eq (process-status (rcirc-buffer-process)) 'open))
-        (with-rcirc-server-buffer
-    	(setq rcirc-buffer-alist
-                (rassq-delete-all buffer rcirc-buffer-alist)))
-        (rcirc-update-short-buffer-names)
-        (if (rcirc-channel-p rcirc-target)
-            (rcirc-send-string (rcirc-buffer-process)
-                               (concat "DETACH " rcirc-target))))
-      (setq rcirc-target nil)
-      (kill-buffer buffer)))
+  (use-package rcirc
+    :ensure nil
+    :custom
+    (rcirc-id-string "Emacs rcirc")
+    (rcirc-server-alist `(("znc.sako.box"
+    			 :port 7000
+    			 :encryption tls
+    			 :nick "sako@emacs/Libera"
+    			 :user-name "sako@emacs/Libera"
+    			 :password ,(concat "sako@emacs/Libera:" (password-store-get "SelfHosted/ZNC")))))
+    (rcirc-fill-column 120)
+    (rcirc-reconnect-delay 5)
+    :config
+    (defun rcirc-detach-buffer ()
+      (interactive)
+      (let ((buffer (current-buffer)))
+        (when (and (rcirc-buffer-process)
+  		 (eq (process-status (rcirc-buffer-process)) 'open))
+  	(with-rcirc-server-buffer
+    	  (setq rcirc-buffer-alist
+  		(rassq-delete-all buffer rcirc-buffer-alist)))
+  	(rcirc-update-short-buffer-names)
+  	(if (rcirc-channel-p rcirc-target)
+              (rcirc-send-string (rcirc-buffer-process)
+                                 (concat "DETACH " rcirc-target))))
+        (setq rcirc-target nil)
+        (kill-buffer buffer))))
 #+end_src
 ** elfeed (rss) 
 Will configure later, (use elfeed protocol ok ty)
