--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1122,8 +1122,8 @@ Will configure later, (use elfeed protocol ok ty)
     (interactive)
     (erc-tls :server "znc.sako.box" :port "7000" :nick "sako" :password (concat "sako@emacs/Libera:" (password-store-get "SelfHosted/ZNC"))))
 
-  (advice-add 'irc :override
-  	    (sakomacs/begin-irc))
+  ;; (advice-add 'irc :override
+  ;; 	    (sakomacs/begin-irc))
 #+end_src
 ** Matrix
 Ill set this up later as well
