--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -207,9 +207,13 @@ kept-old-versions 5)
   ;;   :config
   ;;   (load-theme 'grandshell t))
 
-  (use-package ef-themes
+  ;; (use-package ef-themes
+  ;;   :config
+  ;;   (load-theme 'ef-dark t))
+
+  (use-package tao-theme
     :config
-    (load-theme 'ef-dark t))
+    (load-theme 'yin t))
 
   ;; emacsclient things
   (setq frame-resize-pixelwise t)
