--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -207,13 +207,9 @@ kept-old-versions 5)
   ;;   :config
   ;;   (load-theme 'grandshell t))
 
-  ;; (use-package ef-themes
-  ;;   :config
-  ;;   (load-theme 'ef-dark t))
-
-  (use-package tao-theme
+  (use-package ef-themes
     :config
-    (load-theme 'tao-yin t))
+    (load-theme 'ef-dark t))
 
   ;; emacsclient things
   (setq frame-resize-pixelwise t)
