--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -620,11 +620,8 @@ kept-old-versions 5)
   (unless (eq system-type 'windows-nt)
     (use-package pinentry
       :config
-      (setq epa-pinentry-mode 'loopback))
-    (pinentry-start)
-    (defun pinentry-emacs (desc prompt ok error)
-      (let ((str (read-passwd (concat (replace-regexp-in-string "%22" "\"" (replace-regexp-in-string "%0A" "\n" desc)) prompt ": "))))
-        str))
+      (setq epa-pinentry-mode 'loopback)
+      (pinentry-start))
     )
 #+end_src
 ** Password-Store
