config/emacs: ill try smtpmail again

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1204,11 +1204,9 @@ GNU patch review metho dor sometihng idk
     (setq mu4e-change-filenames-when-moving t)
 
     ;; sending mail
-    ;; (setq message-send-mail-function 'smtpmail-send-it)
-    ;; (add-to-list 'smtpmail-auth-supported 'xoauth2)
-    (setq send-mail-function 'sendmail-send-it
-  	sendmail-program "msmtp")
-
+    (setq message-send-mail-function 'smtpmail-send-it)
+    (add-to-list 'smtpmail-auth-supported 'xoauth2)
+    
     (setq mu4e-update-interval (* 10 60))
     (setq mu4e-get-mail-command (format "INSIDE_EMACS=%s offlineimap" emacs-version)
       epa-pinentry-mode 'ask)
